modified:   QuantumultX.conf

--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -115,6 +115,7 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 
 # > 魔法仅供临时使用
 https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg, tag=临时使用, update-interval=3600, opt-parser=false, enabled=false
+server.snippet, tag=server, update-interval=172800, opt-parser=false, enabled=true
 
 
 
